# gworkspace-cli

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package.json
.changeset/: add-dry-run-to-event-helpers.md  add-recipient-flags.md  fix-setup-docs.md  mcp-hyphen-tool-names.md  output-hygiene.md  platform-aware-keyring.md  refactor-auth-clap.md  refresh-long-running-helper-tokens.md  shell-quoting-and-tips.md
.gemini/: style_guide.md
.github/workflows/: ci.yml  policy.yml
registry/: recipes.yaml
scripts/: coverage.sh
skills/gws-admin-reports/: SKILL.md
skills/gws-calendar/: SKILL.md
skills/gws-calendar-agenda/: SKILL.md
skills/gws-calendar-insert/: SKILL.md
skills/gws-chat/: SKILL.md
skills/gws-chat-send/: SKILL.md
skills/gws-classroom/: SKILL.md
skills/gws-docs/: SKILL.md
skills/gws-docs-write/: SKILL.md
skills/gws-drive/: SKILL.md
skills/gws-drive-upload/: SKILL.md
skills/gws-events/: SKILL.md
skills/gws-events-renew/: SKILL.md
skills/gws-events-subscribe/: SKILL.md
skills/gws-forms/: SKILL.md
skills/gws-gmail/: SKILL.md
skills/gws-gmail-forward/: SKILL.md
skills/gws-gmail-read/: SKILL.md
skills/gws-gmail-reply/: SKILL.md
skills/gws-gmail-reply-all/: SKILL.md
skills/gws-gmail-send/: SKILL.md
skills/gws-gmail-triage/: SKILL.md
skills/gws-gmail-watch/: SKILL.md
skills/gws-keep/: SKILL.md
skills/gws-meet/: SKILL.md
skills/gws-modelarmor/: SKILL.md
skills/gws-modelarmor-create-template/: SKILL.md
skills/gws-modelarmor-sanitize-response/: SKILL.md
skills/gws-people/: SKILL.md
skills/gws-script/: SKILL.md
skills/gws-script-push/: SKILL.md
skills/gws-shared/: SKILL.md
skills/gws-sheets/: SKILL.md
skills/gws-sheets-append/: SKILL.md
skills/gws-sheets-read/: SKILL.md
skills/gws-slides/: SKILL.md
src/: auth.rs  auth_commands.rs  credential_store.rs  error.rs  generate_skills.rs  mcp_server.rs  output.rs  setup.rs  token_storage.rs  validate.rs
src/helpers/: sheets.rs
(+65 files in other folders)
